src/app/component/snapshots/jedit__app__component__preview__test__render_test-5.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│ 71         "init-param": {                                                  ↑│"
"│ 72           "templatePath": "toolstemplates/",                             ║│"
"│ 73           "log": 1,                                                      ║│"
"│ 74           "logLocation": "/usr/local/tomcat/logs/CofaxTools.log",        ║│"
"│ 75           "logMaxSize": "",                                              ║│"
"│ 76           "dataLog": 1,                                                  ║│"
"│ 77           "dataLogLocation": "/usr/local/tomcat/logs/dataLog.log",       ║│"
"│ 78           "dataLogMaxSize": "",                                          ║│"
"│ 79           "removePageCache": "/content/admin/remove?cache=pages&id=",    ║│"
"│ 80           "removeTemplateCache": "/content/admin/remove?cache=templates& ║│"
"│ 81           "fileTransferFolder": "/usr/local/tomcat/webapps/content/fileT ║│"
"│ 82           "lookInContext": 1,                                            █│"
"│ 83           "adminGroupID": 4,                                             █│"
"│ 84           "betaServer": true                                             █│"
"│ 85         }                                                                ║│"
"│ 86       }                                                                  ║│"
"│                                                                             ↓│"
"│←██████████████████████████████████████████████████████████████═════════════→ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
