src/app/component/snapshots/jedit__app__component__preview__test__render_test-6.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│ 85         }                                                                ↑│"
"│ 86       }                                                                  ║│"
"│ 87     ],                                                                   ║│"
"│ 88     "servlet-mapping": {                                                 ║│"
"│ 89       "cofaxCDS": "/",                                                   ║│"
"│ 90       "cofaxEmail": "/cofaxutil/aemail/*",                               ║│"
"│ 91       "cofaxAdmin": "/admin/*",                                          ║│"
"│ 92       "fileServlet": "/static/*",                                        ║│"
"│ 93       "cofaxTools": "/tools/*"                                           ║│"
"│ 94     },                                                                   ║│"
"│ 95     "taglib": {                                                          ║│"
"│ 96       "taglib-uri": "cofax.tld",                                         ║│"
"│ 97       "taglib-location": "/WEB-INF/tlds/cofax.tld"                       ║│"
"│ 98     }                                                                    █│"
"│ 99   }                                                                      █│"
"│100 }                                                                        █│"
"│                                                                             ↓│"
"│←██████████████████████████████████████████████████████████████═════════════→ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
