src/app/component/snapshots/jedit__app__component__preview__test__render_test-7.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│   }                                                                         ↑│"
"│ }                                                                           ║│"
"│,                                                                            ║│"
"│servlet-mapping": {                                                          ║│"
"│ "cofaxCDS": "/",                                                            ║│"
"│ "cofaxEmail": "/cofaxutil/aemail/*",                                        ║│"
"│ "cofaxAdmin": "/admin/*",                                                   ║│"
"│ "fileServlet": "/static/*",                                                 ║│"
"│ "cofaxTools": "/tools/*"                                                    ║│"
"│,                                                                            ║│"
"│taglib": {                                                                   ║│"
"│ "taglib-uri": "cofax.tld",                                                  ║│"
"│ "taglib-location": "/WEB-INF/tlds/cofax.tld"                                ║│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             █│"
"│                                                                             ↓│"
"│←════█████████████████████████████████████████████████████████████████══════→ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
