src/app/component/snapshots/jedit__app__component__preview__test__render_test.snap
---
source: src/app/component/preview.rs
expression: "stateful_render_to_string(&preview, &mut preview_state)"
---
"┌Preview───────────────────────────────────────────────────────────────────────┐"
"│{                                                                            ↑│"
"│  "web-app": {                                                               █│"
"│    "servlet": [                                                             █│"
"│      {                                                                      █│"
"│        "servlet-name": "cofaxCDS",                                          ║│"
"│        "servlet-class": "org.cofax.cds.CDSServlet",                         ║│"
"│        "init-param": {                                                      ║│"
"│          "configGlossary:installationAt": "Philadelphia, PA",               ║│"
"│          "configGlossary:adminEmail": "ksm@pobox.com",                      ║│"
"│          "configGlossary:poweredBy": "Cofax",                               ║│"
"│          "configGlossary:poweredByIcon": "/images/cofax.gif",               ║│"
"│          "configGlossary:staticPath": "/content/static",                    ║│"
"│          "templateProcessorClass": "org.cofax.WysiwygTemplate",             ║│"
"│          "templateLoaderClass": "org.cofax.FilesTemplateLoader",            ║│"
"│          "templatePath": "templates",                                       ║│"
"│          "templateOverridePath": "",                                        ║│"
"│                                                                             ║│"
"│←██████████████████████████████████████████████████████████████████══════════→│"
"└──────────────────────────────────────────────────────────────────────────────┘"
